sc/inc/colorscale.hxx
@@ -270,6 +270,8 @@ public:
     std::optional<Color> GetColor(const ScAddress& rAddr) const;
     void AddEntry(ScColorScaleEntry* pEntry);
 
+    bool IsEqual(const ScFormatEntry& r, bool bIgnoreSrcPos) const override;
+
     virtual void UpdateReference( sc::RefUpdateContext& rCxt ) override;
     virtual void UpdateInsertTab( sc::RefUpdateInsertTabContext& rCxt ) override;
     virtual void UpdateDeleteTab( sc::RefUpdateDeleteTabContext& rCxt ) override;
